<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catvehicle2</name>
  <version>0.0.0</version>
  <description>A package for simulation autonomous vehicles</description>
  <maintainer email="rahulbhadani@email.arizona.edu">Rahul Bhadani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
<exec_depend>joint_state_publisher</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz</exec_depend>
<exec_depend>xacro</exec_depend>
<exec_depend>gazebo_ros</exec_depend>
<build_depend>gazebo_ros</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
	  <build_type>ament_cmake</build_type>
	   <gazebo_ros gazebo_model_path="${prefix}/models"/> 
  </export>
</package>
